# document-intelligence-refinery

./: .gitignore  ACCEPTANCE_MATRIX.md  CHALLENGE_STATUS.md  DOMAIN_NOTES.md  Dockerfile  Makefile  README.md  extraction_rules.yaml  langgraph.json  my_query_output.json  pyproject.toml  run_all_docs.sh  run_all_docs.sh.bak
.refinery/: extraction_ledger.jsonl  query_history.jsonl
.refinery/profiles/: doc_05cd116c8d148f33.json  doc_07f73c06d1765488.json  doc_23a0f7144db9947e.json  doc_262084398a402524.json  doc_415a646a5077b30f.json  doc_4510cef7a67e5476.json  doc_75587d41e7c4a9b8.json  doc_7bc9d75ac27daec6.json  doc_8aebaf799267bc81.json  doc_a75daf179ba13c93.json  doc_c716d4a64e11695a.json  (+6 more)
data/: sample_multi.md  sample_multi.xlsx
reports/: final_qa_provenance_examples.json  final_qa_provenance_examples.md  table_extraction_metrics.json  table_extraction_quality.md
rubric/: extraction_rules.yaml
scripts/: demo_protocol.sh  generate_final_artifacts.py  smoke_e2e.py  validate_e2e.py  validate_pipeline.py  video_demo_5min.sh
tests/: test_chunking.py  test_confidence_scanned_quality.py  test_docx_adapter.py  test_excel_adapter.py  test_facts_amharic.py  test_facts_migration.py  test_file_router.py  test_integration.py  test_lang_detect.py  test_markdown_adapter.py  test_models_schema.py  test_ocr_lang_routing.py  test_ocr_table_reconstruction.py  test_pageindex.py  test_pageindex_quality.py  test_pageindex_scanned_headers.py  test_query_interface.py  test_router.py  test_triage.py  test_vector_store_multilingual.py  test_vision_local.py  test_vision_openrouter.py
(+38 files in other folders)
