[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Local-first document intelligence refinery with provenance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "pdfplumber>=0.11.4",
  "pymupdf>=1.24.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.1",
  "tiktoken>=0.7.0",
  "chromadb>=0.5.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pyright>=1.1.408",
]
agent = [
  "langgraph>=0.2.30",
]
adapters = [
  "docling>=2.16.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "pytesseract>=0.3.13",
  "Pillow>=10.4.0",
]

[project.scripts]
refinery = "refinery.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
